      - [API break] Constructor: removed the argument
        'packageNameGlobsToReinstall' as not needed anymore.
      - [API break] 'getLocalizedDescriptions' is replaced with
        'getLocalizedDescription'.
      - [API break] 'getPolicyVersion' is renamed to 'getPreferredVersion'.
      - New possibility to use index-of-index files to speed up building
        the package cache.
    - cache/package:
      - Apply id version suffixes (^<suffix>) to version strings to
        differentiate versions with same version string but different hash
        sums.
      - New methods begin() and end().
    - cache/relation:
      - [API break] ArchitecturedRelation, ArchitecturedRelationExpression:
        constructor from string subrange is now explicit.
    - config:
      - Don't store unused APT variables anymore.
      - New option 'cupt::console::actions-preview::show-reasons'.
      - New option 'cupt::update::generate-index-of-index'.
    - cache/version:
      - [API break] 'operator==': removed, versions can be now compared by
        pointers' values.
      - [API break] Source, InitializationParameters: replaced shared_ptr's
        with pointers.
      - [API break] InitializationParameters: packageName -> packageNamePtr.
    - system/resolver:
      - [API break] SuggestedPackage: new field 'automaticallyInstalledFlag',
        removed old field 'manuallySelected'.
      - New method 'setAutomaticallyInstalledFlag'.
    - system/worker:
      - [API break] 'setPackagePurgeFlag': now is persistent, and should be
        called before 'setDesiredState'.
      - [ABI break] 'Action::Type' new enum value 'Reinstall'.
    - cache/binarypackage:
      - 'getInstalledVersion': significant speed-up.
      - New methods begin() and end().
    - cache/binaryversion:
      - [API break] Fields 'shortDescription' and 'longDescription' are
        replaced with a new field 'description'.
    - cache/sourcepackage:
      - New methods begin() and end().
    - file: