@@ -34,6 +34,7 @@ cupt (2.6.0~) UNRELEASED; urgency=low
       - [API break] 'getPolicyVersion' is renamed to 'getPreferredVersion'.
       - New possibility to use index-of-index files to speed up building
         the package cache.
+      - [API break] 'getSystemState': now returns persistent constant pointer.
     - cache/package:
       - Apply id version suffixes (^<suffix>) to version strings to
         differentiate versions with same version string but different hash
